fix overflow back to scroll when menu close by pathname update

--- a/src/app/_components/header/hero/styles.module.scss
+++ b/src/app/_components/header/hero/styles.module.scss
@@ -1,6 +1,6 @@
 .slideContainer {
 	position: absolute;
-	top: calc(100vh - 220px);
+	top: calc(100vh - 230px);
 
 	.slide {
 		position: relative;
